# album-cover-genre-classifier

./: .gitignore  README.md  experiments.csv  main.py  pyproject.toml  requirements.txt
models/: best_run10.pt  best_run13.pt  run14.pt  run_1.pt  run_10.pt  run_11.pt  run_12.pt  run_13.pt  run_14.pt  run_2.pt  run_3.pt  run_4.pt  run_5.pt  run_6.pt  run_7.pt  run_8.pt  run_9.pt
notebooks/: 01-data-split.ipynb  02-album-classifier.ipynb  03-plot-past-run.ipynb  04-test-evaluation.ipynb  05-weighting-comparison.ipynb  06-test-evaluation-weighted.ipynb  first-nb.ipynb
results/: run_1.json  run_10.json  run_11.json  run_12.json  run_13.json  run_14.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json  run_9.json
